--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ganache-core": "^2.3.3",
     "jest": "^23.6.0",
     "solc": "^0.5.2",
-    "web3": "^1.0.0-beta.37"
+    "web3": "^1.0.0-beta.37",
+    "typedarray-to-buffer": "^3.1.5"
   }
 }
